# djangocms-snippet

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  addon.json  aldryn_config.py  pyproject.toml  requirements.in  requirements.txt  schemamigration.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_snippet/: __init__.py  admin.py  apps.py  cms_config.py  cms_plugins.py  conf.py  forms.py  models.py  rendering.py  settings.py  urls.py  utils.py  views.py
djangocms_snippet/management/: cms4_data_migration.py
djangocms_snippet/management/commands/: cms4_data_migration.py  create_snippet_versions.py
djangocms_snippet/migrations/: 0001_djangocms_snippet.py  0001_initial.py  0002_rename_missing_tables.py  0002_snippet_slug.py  0003_auto__add_field_snippet_slug.py  0003_auto_data_fill_slug.py  0004_auto_alter_slug_unique.py  0004_feed_slug.py  0005_auto__add_unique_snippet_slug.py  0005_set_related_name_for_cmsplugin_ptr.py  0006_auto_20160831_0729.py  0007_auto_alter_template_helptext.py  0008_auto_change_name.py  0009_alter_snippetptr_cmsplugin_ptr.py  0009_auto_20210811_0942.py  0009_auto_20210816_0944.py  0009_auto_20210831_0715.py  0009_auto_20210909_0901.py  0009_auto_20210915_0445.py  0010_cms4_grouper_version_data_migration.py  0010_cms4_migration.py  0010_migration_assign_grouper_field.py  0010_remove_snippetptr_snippet.py  0011_auto_20210831_0801.py  0011_cms4_plugin_data_migration.py  0012_auto_20210907_0654.py  0012_auto_20210909_0912.py  0012_auto_20210915_0721.py  0012_remove_snippetptr_snippet.py  0013_alter_snippetptr_cmsplugin_ptr.py  0013_auto_20210915_0751.py  0013_rename_snippetptr_new_snippet_0624.py  0013_snippet_site.py  0014_auto_20211019_0522.py
djangocms_snippet/migrations_django/: 0001_initial.py  0002_snippet_slug.py  0003_auto_data_fill_slug.py  0004_auto_alter_slug_unique.py
djangocms_snippet/south_migrations/: 0003_auto__add_field_snippet_slug.py  0004_feed_slug.py
djangocms_snippet/templatetags/: snippet_tags.py
src/djangocms_snippet/: __init__.py  admin.py  apps.py  cms_config.py  cms_plugins.py  cms_toolbars.py  forms.py  models.py  rendering.py  settings.py  utils.py
src/djangocms_snippet/migrations/: 0003_auto_data_fill_slug.py  0004_auto_alter_slug_unique.py  0005_set_related_name_for_cmsplugin_ptr.py  0008_auto_change_name.py  0009_alter_snippetptr_cmsplugin_ptr.py  0009_auto_20210915_0445.py  0010_alter_snippet_id.py  0010_cms4_grouper_version_data_migration.py  (+3 more)
tests/: conftest.py  settings.py  test_admin.py  test_config.py  test_configuration.py  test_forms.py  test_migrations.py  test_models.py  test_plugins.py  test_templatetags.py  test_views.py  tests_models.py  tests_plugins.py  urls.py
tests/requirements/: base.txt  compile.py  dj11_cms40.txt  dj22_cms37.txt  dj22_cms40.txt  dj30_cms37.txt  dj32_cms40.txt  dj42-cms311.txt  dj42_cms40.txt  dj42_cms41.txt  py310-django32-cms311.txt  py310-django42-cms311.txt  py310-django52-cms41.txt  py310-django52-cms50.txt  py311-django32-cms311.txt  py311-django42-cms311.txt  py311-django52-cms41.txt  py311-django52-cms50.txt  py312-django52-cms41.txt  py312-django52-cms50.txt  py312-django52-cms51alpha1.txt  py312-django60-cms50.txt  py312-django60-cms51alpha1.txt  py313-django52-cms50.txt  py313-django52-cms51alpha1.txt  py313-django60-cms50.txt  py313-django60-cms51alpha1.txt  py38-django32-cms311.txt  py38-django42-cms311.txt  py39-django32-cms311.txt  py39-django42-cms311.txt  requirements.in
tests/utils/: factories.py  models.py  utils.py
(+302 files in other folders)
